--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^3.3.2",
     "express": "^4.12.2",
     "morgan": "^1.5.1",
+    "request": "^2.53.0",
+    "spotify-web-api-node": "^2.0.1",
     "swig": "^1.4.2"
   }
 }
