--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "author": "",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.2",
     "express": "^4.12.2",
     "morgan": "^1.5.1",
+    "q": "^1.2.0",
     "request": "^2.53.0",
     "spotify-web-api-node": "^2.0.1",
     "swig": "^1.4.2"
